load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "tokenizer",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(["include/boost/**/*.hpp"]),
    deps = [
        "@boost//libs/config",
        "@boost//libs/assert",
        "@boost//libs/type_traits",
        "@boost//libs/mpl",
        "@boost//libs/throw_exception",
        "@boost//libs/iterator",
    ],
)
